# murfi2

./: .dockerignore  .gitignore  BUILD_HOWTO  LICENSE  README  README.md  TODO  Vagrantfile  build-singularity.sh  build.py  makefile  makefile.front  makefile.gro  makefile.mindhive  murfi_vagrant.sh
src/: Back.vcproj  CMakeLists.txt  Front.sln  Front.vcproj  makefile  src.sln  src.vcproj  test_config.xml
src/app/: RtQtGLTexture.cpp  RtQtGLTexture.h  RtQtWindow.cpp  RtQtWindow.h  makefile
src/app/moc/: makefile  makefile.moc
src/data/: CMakeLists.txt  RtActivation.cpp  RtActivation.h  RtActivationInfo.h  RtData.cpp  RtData.h  RtDataID.cpp  RtDataID.h  RtDataIDs.h  RtDataImage.cpp  RtDataImage.h  RtDataImage.tpp  RtDataImageInfo.cpp  RtDataImageInfo.h  RtDesignMatrix.cpp  RtDesignMatrix.h  RtElementAccess.cpp  RtElementAccess.h  RtEvent.cpp  RtEvent.h  RtFramewiseDisplacement.cpp  RtFramewiseDisplacement.h  RtLocker.h  RtMRIImage.cpp  RtMRIImage.h  RtMRIImageInfo.cpp  RtMRIImageInfo.h  RtMaskImage.cpp  RtMaskImage.h  RtMotion.cpp  RtMotion.h  RtMotionDerivative.cpp  RtMotionDerivative.h  RtROI.h
src/display/: CMakeLists.txt  RtDisplayImage.cpp  RtDisplayImage.h  makefile
src/display/glutmaster/: CMakeLists.txt  glutMaster.cpp  glutMaster.h  glutWindow.cpp  glutWindow.h
src/executive/: CMakeLists.txt  RtCode.cpp  RtCode.h  RtConductor.cpp  RtConductor.h  RtConfig.cpp  RtConfig.h  RtConfigFmriExperiment.cpp  RtConfigFmriExperiment.h  RtConfigFmriRun.cpp  RtConfigFmriRun.h  RtConfigVal.h  RtDisplay.h  RtExperiment.cpp  RtExperiment.h  RtFSLInterface.cpp  RtFSLInterface.h  RtSignalThrower.h  RtStream.cpp  RtStream.h  RtStreamComponent.h  debug_levels.h  makefile  simple_ls.cpp  simple_ls.h
src/executive/tinyxml/: tinyxml.h
src/frontend/: BUGS  TODO  main.cpp  makefile
src/frontend/Actors/: Fr2DSliceActor.cpp  Fr2DSliceActor.h  FrBaseActor.cpp  FrBaseActor.h  FrCrosshair.cpp  FrCrosshair.h  FrMosaicSliceActor.cpp  FrMosaicSliceActor.h  FrOrthoSliceActor.cpp  FrOrthoSliceActor.h  FrSelection.cpp  FrSelection.h
src/frontend/Commands/: FrAddLayerCmd.cpp  FrAddLayerCmd.h  FrBaseCmd.cpp  FrBaseCmd.h  FrChangeCamCmd.cpp  FrChangeCamCmd.h  FrChangeSliceCmd.cpp  FrChangeSliceCmd.h  FrChangeTbcCmd.cpp  FrChangeTbcCmd.h  FrChangeViewCmd.cpp  FrChangeViewCmd.h  FrCreateROICmd.cpp  FrCreateROICmd.h  FrDeleteGraphTabCmd.cpp  FrDeleteGraphTabCmd.h  FrDeleteTabSettingsCmd.cpp  FrDeleteTabSettingsCmd.h  FrGraphCmd.cpp  FrGraphCmd.h  FrLayerCmd.cpp  FrLayerCmd.h  FrLoadGraphTabSettingsCmd.cpp  FrLoadGraphTabSettingsCmd.h  FrLoadImageCmd.cpp  FrLoadImageCmd.h  FrLoadTabsCmd.cpp  FrLoadTabsCmd.h  FrManageToolCmd.cpp  FrManageToolCmd.h  FrMultiCmd.cpp  FrMultiCmd.h  FrRefreshLayerInfoCmd.cpp  FrRefreshLayerInfoCmd.h  FrRefreshWidgetsInfoCmd.cpp  FrRefreshWidgetsInfoCmd.h  FrRemoveLayerCmd.cpp  FrRemoveLayerCmd.h  FrResetImageCmd.cpp  FrResetImageCmd.h  (+30 more)
src/frontend/Controllers/: FrCommandController.cpp  FrCommandController.h  FrController.cpp  FrController.h  FrInteractorStyle.cpp  FrInteractorStyle.h  FrMainController.cpp  FrMainController.h  FrToolController.cpp  FrToolController.h
src/frontend/Document/: FrAppSettingsDocObj.cpp  FrAppSettingsDocObj.h  FrDataStore.cpp  FrDataStore.h  FrDocument.cpp  FrDocument.h  FrDocumentObj.cpp  FrDocumentObj.h  FrGraphDocObj.cpp  FrGraphDocObj.h  FrGraphPaneDocObj.cpp  FrGraphPaneDocObj.h  FrGraphTabDocObj.cpp  FrGraphTabDocObj.h  FrImageDocObj.cpp  FrImageDocObj.h  FrLayerDocObj.cpp  FrLayerDocObj.h  FrMainDocument.cpp  FrMainDocument.h  FrPointsDocObj.cpp  FrPointsDocObj.h  FrRoiDocObj.cpp  FrRoiDocObj.h  FrTabSettingsDocObj.cpp  FrTabSettingsDocObj.h  FrViewDocObj.cpp  FrViewDocObj.h  makefile
src/frontend/Filters/: FrBaseFilter.cpp  FrBaseFilter.h  FrColormapFilter.cpp  FrColormapFilter.h  FrMaskToRgbaFilter.cpp  FrMaskToRgbaFilter.h  FrMosaicFilter.cpp  FrMosaicFilter.h  FrSliceExtractor.cpp  FrSliceExtractor.h  FrTBCFilter.cpp  FrTBCFilter.h
src/frontend/FrApplication/: FrApplication.cpp  FrApplication.h  frapplication_moc.cpp
src/frontend/FrBookmark/: FrBookmark.cpp  FrBookmark.h
src/frontend/FrBookmarkWidget/: FrBookmarkWidget.cpp  FrBookmarkWidget.h
src/frontend/FrMainWindow/: FrMainWindow.cpp  (+4 more)
src/io/: CMakeLists.txt  RtClientSocket.cpp  RtClientSocket.h  RtDataListener.h  RtDataStore.cpp  RtDataStore.h  RtExternalSenderImageInfo.cpp  RtExternalSenderImageInfo.h  RtIO.cpp  RtIO.h  RtInfoClient.cpp  RtInfoClient.h  RtInfoServer.cpp  RtInfoServer.h  RtInput.cpp  RtInput.h  RtInputScannerImages.cpp  RtInputScannerImages.h  RtInputSynth.cpp  RtInputSynth.h  RtInputUSBKb.cpp  RtInputUSBKb.h  RtOutput.cpp  RtOutput.h  RtOutputFile.cpp  RtOutputFile.h  RtOutputSocket.cpp  RtOutputSocket.h  RtServerSocket.cpp  RtServerSocket.h  RtSocketListener.cpp  RtSocketListener.h  RtSocketScannerImage.cpp  RtSocketScannerImage.h  RtSocketServiceServer.h  Unified.h  makefile
src/qt/: ActivationImage.cpp  ActivationImage.h  Colormap.cpp  Colormap.h  DesignEditor.cpp  DesignEditor.h  FileButton.cpp  FileButton.h  GLMWizardPage.cpp  GLMWizardPage.h  Image.cpp  Image.h  ImageWidget.cpp  ImageWidget.h  MRImage.cpp  MRImage.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Makefile  MaskImage.cpp  MaskImage.h  MaskWizardPage.cpp  MaskWizardPage.h  PlotController.cpp  PlotController.h  ROICombineWizardPage.cpp  ROICombineWizardPage.h  UnivariateRunEditor.cpp  UnivariateRunEditor.h  main.cpp  moc_DesignEditor.cpp  moc_FileButton.cpp  moc_GLMWizardPage.cpp  moc_ImageWidget.cpp  moc_MainWindow.cpp  moc_MaskWizardPage.cpp  moc_PlotController.cpp  moc_ROICombineWizardPage.cpp  moc_UnivariateRunEditor.cpp  (+1 more)
src/stream/: CMakeLists.txt  RtEndTask.cpp  RtEndTask.h  RtPasser.cpp  RtPasser.h  RtProcessor.cpp  RtProcessor.h  RtStream.cpp  RtStream.h  RtStreamComponent.cpp  RtStreamComponent.h  RtStreamMessage.cpp  RtStreamMessage.h  makefile
src/util/: CMakeLists.txt  RtLimit.h  RtTypes.h  add_functions.cpp  add_functions.h  circular.h  constants.h  dump.c  gnuplot_i.hpp  logarithm.h  makefile  printVnl44Mat.cpp  printVnlMat.cpp  printVnlVector.cpp  site_config.h
(+578 files in other folders)
